# mows

./: .gitattributes  .gitignore  .gitlab-ci.yml  .prettierrc  Cargo.toml  Dockerfile  PLAN.md  README.md  TODO.md  app.yml  build.sh  create_ts_types.sh  deny.toml  docker-compose.yml  flake.nix  ideas.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  service.yml
addons/image/: Cargo.toml  Dockerfile
addons/image/dev/: config.yml
addons/image/src/: config.rs  convert.rs  db.rs  exiftool.rs  image_types.rs  lib.rs  main.rs  metadata_types.rs  utils.rs
addons/muzik/: .gitignore  Cargo.toml
addons/muzik/src/: main.rs
addons/videoProcessor/: Cargo.toml  Dockerfile
addons/videoProcessor/dev/: config.yml
addons/videoProcessor/src/: convert.rs  main.rs
cloud-apis/filez/common/: Cargo.toml
desktop/src-tauri/: Cargo.toml
desktop/src-tauri/src/: api_types.rs  lib.rs  main.rs  sync.rs  types.rs  utils.rs
manager/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  build.sh  cargo-workspace-docker.toml  codegen.sh  debug-container.yaml  dnsmasq.Dockerfile  docker-compose.yml  dockerbuild.toml  manager.Dockerfile  no-ui.Dockerfile  notes.md  openapi.json  package-manager  qemu.Dockerfile  readme.md  shell.nix  ssh.exp  start-without-ui.sh  start.sh  swagger.json  test.key  test.password
manager/docker/: codegen.Dockerfile  manager.Dockerfile  qemu.Dockerfile
manager/install/argocd/: .gitignore
manager/install/dev/: install.sh  tor.yml
manager/install/old/: getKubeCert.sh  install.sh
manager/misc/: .bashrc  .zshrc  init-libvirtd.sh  internal-config.yml  oci-registry-upstreams.yaml  supervisord.conf
manager/misc/.dev/: debug.yml  ingress.yml  longhorn-static.yml
manager/misc/qemu/: init-libvirtd.sh
manager/misc/tunnel/: install.sh
manager/mows-package-manager-client-temp/: README.md
manager/mows-package-manager-client-temp/docs/: RenderRepositoriesRepository.md  RenderRepositoriesReqBody.md  RenderRepositoriesTargetKubectlApply.md  RenderRepositoriesTargetOneOf.md  RenderRepositoriesTargetOneOf1.md  Repository.md
manager/scripts/: attach-console.sh  codegen.sh  create-local-net.sh  generate-kube-vip-files.sh  reset-dhcp.sh  start-all.sh  start-local-registries.sh  start-local-registry.sh  start-manager.sh  start-peripherals.sh  start-qemu.sh
manager/src/: api.rs  cluster.rs  config.rs  discovery.rs  internal_config.rs  lib.rs  machines.rs  macros.rs  main.rs  node.rs  pixiecore.rs  public_ip.rs  pxe.rs  ssh.rs  tasks.rs  tracing.rs  types.rs  ui.rs  utils.rs
manager/src/api/: boot.rs  cluster.rs  clusters.rs  config.rs  direct_terminal.rs  docker_terminal.rs  health.rs  machines.rs  openapi.rs  public_ip.rs  terminal.rs
manager/src/cloud-config/: primary.yml  secondary.yml
manager/src/cluster/: cluster.rs  cluster_storage.rs  db.rs  ingress.rs  monitoring.rs  network.rs  node.rs  policy.rs  secrets.rs  storage.rs
manager/src/os/: cloud_init.rs  pixiecore.rs
manager/test/: create-machine.sh  delete-machine.sh
manager/ui/: .gitignore  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
manager/ui/e2e/: README.md  dev-page.spec.ts
manager/ui/src/: App.tsx  api-client.ts  config.ts  index.css  index.less  index.scss  languages.ts  main.tsx  utils.tsx
operator/: Cargo.toml
operator/src/: lib.rs  main.rs
operator/src/public_ip/: crd.rs  index.rs
operator/src/public_ip_connection/: crd.rs
operators/mows-package-manager/: .dockerignore  .gitignore  Cargo.toml  README.md  build.sh  cargo-workspace-docker.toml  docker-compose.yml  dockerbuild.toml  notes.md  openapi.json  swagger.json  test.yaml
operators/mows-package-manager/docker/: codegen.Dockerfile  codegen.sh  package-manager.Dockerfile
operators/mows-package-manager/schemas/: manifest-schema.json
operators/mows-package-manager/scripts/: codegen.sh  genSchema.sh  start-package-manager.sh
operators/mows-package-manager/src/: config.rs  dev.rs  error_formatter.rs  lib.rs  rendered_document.rs  repository_paths.rs  (+2 more)
operators/package-manager/: .dockerignore  .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  notes.md  swagger.json  test.yaml
operators/pektin-dns-controller/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.sh  docker-compose.yaml  install.sh  pektin-common
operators/pektin-resource-controller/: .dockerignore  Cargo.toml  Dockerfile  PektinResourceCRDSchema.json  build.sh  cargo-workspace-docker.toml  docker-compose.yaml  dockerbuild.toml  install.sh
operators/vault-resource-controller/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  VaultResourceCRDSchema.json  build.sh  cargo-workspace-docker.toml  controller_policy.hcl  crd_schema.json  docker-compose.yaml  dockerbuild.toml  install.sh  mows-common
operators/zitadel-controller/: .dockerignore  Cargo.toml  Dockerfile  build.sh  docker-compose.yaml  dockerbuild.toml  install.sh
operators/zitadel-resource-controller/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  ZitadelResourceCRDSchema.json  build.sh  cargo-workspace-docker.toml  docker-compose.yaml  install.sh  issues.md
server/: Cargo.toml  Dockerfile  create_ts_types.sh  dev.Dockerfile  gen-doc.sh  readme.md
server/dev/: config.yml  docker-compose.yml
server/src/: auth.rs  config.rs  db.rs  dev.rs  dynamic_groups.rs  import.rs  internal_types.rs  interossea.rs  lib.rs  macros.rs  main.rs  permissions.rs  readonly_mount.rs  storage.rs  types.rs  utils.rs
server/tests/: package.json
utils/mows-auth-core/: Cargo.toml
utils/mows-common/: Cargo.toml  cargo-workspace-docker.toml
utils/mows-common-rust/: .gitignore  Cargo.toml  cert.pem  flake.nix
utils/mows-vm-supervisor/: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.sh  cargo-workspace-docker.toml  docker-compose.yaml
utils/mozart/: Cargo.toml
utils/mpm/: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODO.md  build.rs  build.sh  cargo-workspace-docker.toml  compose-feature.md  docker-compose.yaml  issues.md
(+3788 files in other folders)
