[workspace]
resolver = "2"

members = [
    "utils/*",
    "operators/*",
    "manager",
    "apis/core/pektin/*",
    "apis/cloud/filezz/server",
]
exclude = [
    ".cargo-home",
    "./apis/core/pektin/charts/",
    "./apis/core/pektin/docs/",
    "./apis/core/pektin/ribston/",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.package.lints.rust]
unsafe_code = "forbid"

[workspace.package.lints.clippy]
enum_glob_use = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
indexing_slicing = "deny"

[workspace.package.profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
rpath = false


[workspace.dependencies]
mows-common = { path = "./utils/mows-common" }
pektin-common = { path = "./apis/core/pektin/common" }
zitadel = { path = "./utils/zitadel-rust" }
mows-package-manager = { path = "./operators/mows-package-manager" }
acme-rs = { path = "./apis/core/pektin/acme-rs" }


utoipa-swagger-ui = "9.0.1"
utoipa = "5.2.0"
utoipa-axum = "0.2.0"

axum = "0.8.4"
axum-extra = "0.10.1"
tower = "0.5.2"
tower-http = "0.6.4"
tokio = "1.45.0"
thiserror = "2.0.12"
anyhow = "1.0.98"
tracing = "0.1.40"
serde = "1.0.219"
serde_json = "1.0.132"
mime_guess = "2.0.5"
url = "2.5.4"

opentelemetry = "0.26.0"
tracing-opentelemetry = "0.27.0"
opentelemetry-otlp = "0.26.0"
opentelemetry_sdk = "0.26.0"
opentelemetry-semantic-conventions = "0.26.0"
