[workspace]
resolver = "2"

members = [
    "utils/*",
    "operators/*",
    "manager",
    "apis/core/pektin/*",
    "apis/cloud/filez/server",
]
exclude = [
    ".cargo-home",
    "./apis/core/pektin/charts/",
    "./apis/core/pektin/docs/",
    "./apis/core/pektin/ribston/",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
indexing_slicing = "deny"

[profile.release]
#codegen-units = 1
debug = false
debug-assertions = false
lto = true
#opt-level = 3
rpath = false


[workspace.dependencies]
mows-common-rust = { path = "./utils/mows-common-rust", default-features = false }
pektin-common = { path = "./apis/core/pektin/common", default-features = false }
zitadel = { path = "./utils/zitadel-rust", default-features = false }
mows-package-manager = { path = "./operators/mows-package-manager", default-features = false }
acme-rs = { path = "./apis/core/pektin/acme-rs", default-features = false }
diesel-enum = { path = "./utils/diesel-enum", default-features = false }


utoipa-swagger-ui = { version = "9.0.2", default-features = false }
utoipa = { version = "5.3.1", default-features = false }
utoipa-axum = { version = "0.2.0", default-features = false }

axum = { version = "=0.8.4", default-features = false }
axum-extra = { version = "=0.10.1", default-features = false }
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6.4", default-features = false }
tokio = { version = "1.45.0", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
anyhow = { version = "1.0.98", default-features = false }
tracing = { version = "0.1.40", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1", default-features = false }
serde_yaml = { version = "0.9.34", default-features = false }
mime_guess = { version = "2.0.5", default-features = false }
url = { version = "2.5.4", default-features = false }

opentelemetry = { version = "=0.26.0", default-features = false }
tracing-opentelemetry = { version = "=0.27.0", default-features = false }
opentelemetry-otlp = { version = "=0.26.0", default-features = false }
opentelemetry_sdk = { version = "=0.26.0", default-features = false }
opentelemetry-semantic-conventions = { version = "=0.26.0", default-features = false }
axum-tracing-opentelemetry = { version = "=0.26.1", default-features = false }

include_dir = { version = "0.7.3", default-features = false }


reqwest = { version = "0.12.15", default-features = false }
vaultrs = { version = "0.7.4", default-features = false }
rand = { version = "0.9.1", default-features = false }
gtmpl = { version = "0.7", default-features = false }
gtmpl_value = { version = "0.5.1", default-features = false }
gtmpl_derive = { version = "0.5.0", default-features = false }

kube = { version = "=0.96.0", default-features = false }
k8s-openapi = { version = "=0.23.0", default-features = false }

serde_variant = { version = "0.1.3", default-features = false }

schemars = { version = "0.8.22", default-features = false }

chrono = { version = "0.4.41", default-features = false }
uuid = { version = "1.17.0", default-features = false }
futures-util = { version = "0.3.31", default-features = false }

reqwest-tracing = { version = "0.5.7", default-features = false }
p256 = { version = "0.13.2", default-features = false }
env_logger = { version = "0.11.8", default-features = false }
data-encoding = { version = "2.9.0", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }
itertools = { version = "0.14.0", default-features = false }
tracing-actix-web = { version = "0.7.18", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false }
async-trait = { version = "0.1.88", default-features = false }
tokio-tungstenite = { version = "0.26.2", default-features = false }
rcgen = { version = "0.13.2", default-features = false }
time = { version = "0.3.41", default-features = false }
flate2 = { version = "1.1.2", default-features = false }
actix-web = { version = "4.11.0", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
futures = { version = "0.3.31", default-features = false }
actix-cors = { version = "0.7.1", default-features = false }
parking_lot = { version = "0.12.4", default-features = false }
moka = { version = "0.12.10", default-features = false }
pbjson-types = { version = "0.7.0", default-features = false }
prometheus-client = { version = "0.22.3", default-features = false }
tonic = { version = "0.13.1", default-features = false }
openidconnect = { version = "3.5.0", default-features = false }
