[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "manager"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
indexing_slicing = "deny"

[dependencies]
serde = { version = "1.0.214", features = [
    "derive",
    "std",
], default-features = false }
serde_yaml = { version = "0.9.33" }
serde_json = { version = "1.0.132" }
tempfile = "3.14.0"
anyhow = "1.0.93"

rand = "0.8.5"
hcloud = { version = "0.21.0", default-features = false, features = [
    "rustls-tls",
] }


# tracing must be enabled explicitly
tokio = { version = "1.41.0", default-features = false, features = [
    "full",
    "tracing",
] }

axum = { version = "=0.7.5", features = ["ws", "tokio"] }
tokio-tungstenite = "0.24.0"

futures = "0.3.31"

utoipa-swagger-ui = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }

tower = { version = "0.5.1", features = ["util", "timeout"] }
tower-http = { version = "0.6.1", features = [
    "fs",
    "cors",
    "add-extension",
    "trace",
] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
opentelemetry = { version = "0.26.0" }
tracing-opentelemetry = "0.27.0"
opentelemetry-otlp = { version = "0.26.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = { version = "0.26.0", features = [
    "semconv_experimental",
] }

wait-timeout = "0.2.0"

console-subscriber = "0.4.1"

async-ssh2-tokio = "0.8.10"

bytes = "=1.9.0" # fixed version due to https://github.com/AspectUnk/russh-sftp/issues/64
pty-process = { version = "0.4.0", features = ["async"] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
async-stream = "=0.3.6"
thiserror = "2.0.3"
tokio-util = "0.7.8"
serde-xml-rs = "0.6.0"


kube = { version = "=0.96.0", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "=0.23.0", features = ["latest"] }

reqwest = { version = "0.12.9", default-features = false, features = [
    "json",
    "rustls-tls",
] }
lazy_static = "1.5.0"
url = { version = "2.5.3", features = ["serde"] }

vaultrs = "0.7.3"
data-encoding = "2.6.0"

include_dir = "0.7.3"
mime_guess = "2.0.5"


mows-package-manager = { workspace = true }
mows-common = { workspace = true }


# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = "0.6.0"


# [profile.release]
# codegen-units = 1
# debug = false
# debug-assertions = false
# lto = true
# opt-level = 3
# rpath = false
