[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "manager"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
indexing_slicing = "deny"

[dependencies]
serde = { workspace = true, features = [
    "derive",
    "std",
], default-features = false }
serde_yaml = { version = "0.9.33" }
serde_json = { workspace = true }
tempfile = "3.14.0"
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = "0.8.5"
hcloud = { version = "0.21.0", default-features = false, features = [
    "rustls-tls",
] }


# tracing must be enabled explicitly
tokio = { workspace = true, default-features = false, features = [
    "full",
    "tracing",
] }

axum = { workspace = true, features = ["ws", "tokio"] }
tokio-tungstenite = "0.24.0"

futures = "0.3.31"

utoipa-swagger-ui = { workspace = true, features = ["axum"] }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }

tower = { workspace = true, features = ["util", "timeout"] }
tower-http = { workspace = true, features = [
    "fs",
    "cors",
    "add-extension",
    "trace",
] }

tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }

opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-semantic-conventions = { workspace = true, features = [
    "semconv_experimental",
] }

wait-timeout = "0.2.0"

console-subscriber = "0.4.1"

async-ssh2-tokio = "0.8.10"

bytes = "=1.9.0" # fixed version due to https://github.com/AspectUnk/russh-sftp/issues/64
pty-process = { version = "0.4.0", features = ["async"] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
async-stream = "=0.3.6"

tokio-util = "0.7.8"
serde-xml-rs = "0.6.0"


kube = { workspace = true, features = ["runtime", "derive", "client"] }
k8s-openapi = { workspace = true, features = ["latest"] }

reqwest = { workspace = true, default-features = false, features = [
    "json",
    "rustls-tls",
] }
lazy_static = "1.5.0"
url = { workspace = true, features = ["serde"] }

vaultrs = { workspace = true }
data-encoding = "2.6.0"

include_dir = { workspace = true }
mime_guess = { workspace = true }
mows-package-manager = { workspace = true }
mows-common = { workspace = true }


# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = "0.6.0"


# [profile.release]
# codegen-units = 1
# debug = false
# debug-assertions = false
# lto = true
# opt-level = 3
# rpath = false
