[package]
name = "manager"
version = "0.1.0"
edition = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "manager"
path = "src/main.rs"

[dependencies]
serde = { workspace = true, features = [
    "derive",
    "std",
] }
serde_yaml = { workspace = true }
serde_json = { workspace = true, features=["default"] }
tempfile = "3.14.0"
anyhow = { workspace = true, features=["default"] }
thiserror = { workspace = true, features=["default"] }
rand = { workspace = true, features=["default"] }
hcloud = { version = "0.21.0",  default-features=false, features = [
    "rustls-tls",
] }


# tracing must be enabled explicitly
tokio = { workspace = true,  features = [
    "full",
    "tracing",
] }

axum = { workspace = true, features = ["ws", "tokio","default"] }
tokio-tungstenite = { workspace = true, features=["default"] }

futures = { workspace = true, features=["default"] }

utoipa-swagger-ui = { workspace = true, features = ["axum"] }
utoipa = { workspace = true, features=["macros","axum_extras"] }
utoipa-axum = { workspace = true }

tower = { workspace = true, features = ["util", "timeout"] }
tower-http = { workspace = true, features = [
    "fs",
    "cors",
    "add-extension",
    "trace",
] }

tracing = { workspace = true, features=["default"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "chrono"] }

opentelemetry = { workspace = true, features=["default"] }
tracing-opentelemetry = { workspace = true, features=["default"] }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-semantic-conventions = { workspace = true, features = [
    "semconv_experimental",
] }

wait-timeout = "0.2.0"

console-subscriber = "0.4.1"

async-ssh2-tokio = "0.8.10"

bytes = "1.10.1" # fixed version due to https://github.com/AspectUnk/russh-sftp/issues/64
pty-process = { version = "0.4.0", features = ["async"] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
async-stream = "=0.3.6"

tokio-util = "0.7.8"
serde-xml-rs = "0.6.0"


kube = { workspace = true, features = ["runtime", "derive", "client"] }
k8s-openapi = { workspace = true, features = ["latest"] }

reqwest = { workspace = true,  features = [
    "json",
    "rustls-tls",
] }
lazy_static = { workspace = true }
url = { workspace = true, features = ["serde"] }

vaultrs = { workspace = true, features = ["rustls"] }
data-encoding = { workspace = true, features=["default"] }

include_dir = { workspace = true, features=["default"] }
mime_guess = { workspace = true, features=["default"] }
mows-package-manager = { workspace = true, features=["default"] }
mows-common-rust = { workspace = true, features=["default"] }



