[package]
name = "mows-operator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
indexing_slicing = "deny"


[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.93.1", default-features = true, features = ["derive"] }
kube-derive = "0.93.1"
kube-runtime = "0.93.1"
k8s-openapi = { version = "0.22.0", features = ["latest"] }
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
schemars = "0.8"
anyhow = "1.0"
