[[bin]]
name = "main"
path = "src/main.rs"

[package]
name = "filez"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
hyper = { version = "0.14",default-features = false, features = [ "server", "http1", "tcp", "stream", "http2" ] }
tokio = { version = "1.17.0", default-features = false,  features = [ "rt-multi-thread", "macros", "signal", "fs" ] }

mongodb = {version="2.3.1", features=["bson-serde_with"]}
futures = "0.3"
bson="2.4.0"

serde = {version="1.0",features = ["derive","std"], default-features = false}
serde_yaml = {version="0.9.13"}
serde_json={version="1"}
anyhow="1"
lazy_static="1.3.0"
sha2 = {version="0.10.6"}
hex = "0.4"
chrono="0.4.22"
rand="0.8.5"
hyper-staticfile = { version="0.9.5"}
http-range="0.1.5"
qstring="0.7.2"

jsonwebtoken = "8"
reqwest={version="0.11.12"}
once_cell="1"

mime_guess = {git="https://github.com/hfiguiere/mime_guess", branch="dcraw-types" }
filetime = "0.2"

indicatif = "0.17.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
rpath = false
