[package]
name = "imageprocessing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
filez-common = { path = "../../common/" }
tokio = { version = "1.17.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "fs",
] }

mongodb = { version = "2.3.1", features = ["bson-serde_with"] }
futures = "0.3"
bson = "2.4.0"

serde = { version = "1.0", features = [
    "derive",
    "std",
], default-features = false }
serde_json = { version = "1" }
serde_yaml = { version = "0.9.13" }

anyhow = "1"

lazy_static = "1.3.0"

chrono = "0.4.23"
#image = { version="0.24.5",features=["avif"]}
# avif performance is better since a recent patch
image = { git = "https://github.com/image-rs/image", branch = "master", features = [
    "avif",
] }

reqwest = "0.11.14"


[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"


[profile.release-small]
inherits = "release"
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
rpath = false
