[package]
name = "muzik"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2" 

mongodb = {version="2.3.1", features=["bson-serde_with"]}
futures = "0.3"
bson="2.4.0"


serde = {version="1.0",features = ["derive","std"], default-features = false}
serde_yaml = {version="0.9.13"}
serde_json={version="1"}
anyhow="1"
lazy_static="1.3.0"

reqwest="0.11.14"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
rpath = false