[package]
name = "mows-package-manager"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "generate_schema"
path = "src/bin/generate_schema.rs"


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
indexing_slicing = "deny"

[dependencies]
serde = { workspace = true, features = [
    "derive",
    "std",
], default-features = false }


serde_yaml_ng = { git = "https://github.com/firstdorsal/serde-yaml-ng" }

serde_json = { workspace = true }

tokio = { workspace = true, default-features = false, features = [
    "full",
    "tracing",
] }


axum = { workspace = true, features = ["ws", "tokio"] }
tokio-tungstenite = "0.24.0"

futures = "0.3.31"

utoipa-swagger-ui = { workspace = true, features = ["axum"] }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }


tower = { workspace = true, features = ["util", "timeout"] }
tower-http = { workspace = true, features = [
    "fs",
    "cors",
    "add-extension",
    "trace",
] }


thiserror = { workspace = true }
anyhow = { workspace = true }

tracing = { workspace = true }
mows-common-rust = { workspace = true }
gtmpl_value = { workspace = true }


url = { workspace = true, features = ["serde"] }

include_dir = { workspace = true }
mime_guess = { workspace = true }
dotenvy = "0.15.7"
sha2 = "0.10.8"
tar = "0.4.43"
flate2 = "1.0.35"

kube = { workspace = true, features = ["runtime", "derive", "client"] }
k8s-openapi = { workspace = true, features = ["latest"] }
clap = { version = "4.5.31", features = ["derive"] }
shellexpand = "3.1.0"
json-patch = "4.0.0"
regex = "1.11.1"
jsonptr = "0.7.1"
toml = "0.8.20"
serde_variant = { workspace = true }
schemars = { workspace = true }
