[package]
name = "mows-package-manager"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "generate_schema"
path = "src/bin/generate_schema.rs"


[features]
default = []

[dependencies]
serde = { workspace = true, features = ["derive", "std"] }


serde_yaml_ng = { git = "https://github.com/firstdorsal/serde-yaml-ng" }

serde_json = { workspace = true, features = ["default"] }

tokio = { workspace = true, features = ["full", "tracing"] }


axum = { workspace = true, features = ["ws", "tokio", "default"] }
tokio-tungstenite = { workspace = true, features = ["default"] }

futures = { workspace = true }

utoipa-swagger-ui = { workspace = true, features = ["axum"] }
utoipa = { workspace = true, features = ["macros", "axum_extras"] }
utoipa-axum = { workspace = true }


tower = { workspace = true, features = ["util", "timeout"] }
tower-http = { workspace = true, features = [
    "fs",
    "cors",
    "add-extension",
    "trace",
] }


thiserror = { workspace = true, features = ["default"] }
anyhow = { workspace = true, features = ["default"] }

tracing = { workspace = true, features = ["default"] }
mows-common-rust = { workspace = true, features = ["default"] }
gtmpl_value = { workspace = true }


url = { workspace = true, features = ["serde"] }

include_dir = { workspace = true, features = ["default"] }
mime_guess = { workspace = true, features = ["default"] }
dotenvy = "0.15.7"
sha2 = { workspace = true, features = ["default"] }
tar = "0.4.43"
flate2 = { workspace = true, features = ["default"] }

kube = { workspace = true, features = ["runtime", "derive", "client"] }
k8s-openapi = { workspace = true, features = ["latest"] }
clap = { version = "4.5.31", features = ["derive"] }
shellexpand = "3.1.0"
json-patch = "4.0.0"
regex = { version = "1.11.1" }
jsonptr = "0.7.1"
toml = "0.8.20"
serde_variant = { workspace = true }
schemars = { workspace = true, features = ["default"] }
