[package]
name = "mows-package-manager"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "main"
path = "src/main.rs"


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
indexing_slicing = "deny"

[dependencies]
serde = { version = "1.0.214", features = [
    "derive",
    "std",
], default-features = false }


serde_yaml_ng = { git = "https://github.com/firstdorsal/serde-yaml-ng" }

serde_json = { version = "1.0.132" }

tokio = { version = "1.41.0", default-features = false, features = [
    "full",
    "tracing",
] }


axum = { version = "0.7.5", features = ["ws", "tokio"] }
tokio-tungstenite = "0.24.0"

futures = "0.3.31"

utoipa-swagger-ui = { version = "=8.0.3", features = ["axum"] }
utoipa = { version = "5.2.0", features = [
    "axum_extras",
    "macros",
    "openapi_extensions",
    "debug",
] }
utoipa-axum = { version = "=0.1.2", features = ["debug"] }


tower = { version = "0.5.1", features = ["util", "timeout"] }
tower-http = { version = "0.6.1", features = [
    "fs",
    "cors",
    "add-extension",
    "trace",
] }


thiserror = "2.0.3"
anyhow = "1.0.93"

tracing = "0.1.40"
mows-common = { path = "./mows-common" }
gtmpl_value = { version = "0.5.0" }


url = { version = "2.5.4", features = ["serde"] }

include_dir = "0.7.3"
mime_guess = "2.0.5"
diesel = { version = "2.2.5", default-features = false, features = ["sqlite"] }
dotenvy = "0.15.7"
deadpool-diesel = { version = "0.6.1", features = ["sqlite"] }
diesel_migrations = "2.2.0"
sha2 = "0.10.8"
tar = "0.4.43"
fs_extra = "1.3.0"
flate2 = "1.0.35"

kube = { version = "=0.96.0", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "=0.23.0", features = ["latest"] }
