[package]
name = "pektin-dns-controller"
version = "0.14.0"
edition = "2021"
publish = false


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
indexing_slicing = "deny"

[[bin]]
doc = false
name = "main"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"


[features]
default = ["telemetry"]
telemetry = ["opentelemetry-otlp"]

[dependencies]
actix-web = "4.4.0"
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.25"
chrono = { version = "0.4.26", features = ["serde"] }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = [
    "json",
    "env-filter",
    "chrono",
] }
tracing-opentelemetry = "0.27.0"
opentelemetry = { version = "0.26.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.26.0", optional = true }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }

thiserror = "2.0.0"
anyhow = "1.0.93"
prometheus-client = "0.22.2"
vaultrs = "0.7.2"
serde_variant = "0.1.3"
itertools = "0.13.0"
reqwest = { version = "0.12.9", default-features = false, features = [
    "rustls-tls",
] }
actix-web-opentelemetry = "0.19.0"


pektin-common = { path = "../../apis/core/pektin/common" }


[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.96.0"

# testing new releases - ignore
#git = "https://github.com/kube-rs/kube.git"
#branch = "main"
#rev = "19b90ad3a4dbc83e1dd742847c7707333259b1bb"
#path = "../kube/kube"
