[package]
name = "pektin_resource_controller"
version = "0.14.0"
edition = "2021"
publish = false


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
indexing_slicing = "deny"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"


[dependencies]
actix-web = "4.4.0"
futures = "0.3.31"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { version = "0.4.26", features = ["serde"] }

tracing = { workspace = true }
opentelemetry = { workspace = true, features = ["trace"] }


thiserror = { workspace = true }
anyhow = { workspace = true }
prometheus-client = "0.22.2"
vaultrs = { workspace = true }
serde_variant = "0.1.3"
itertools = "0.13.0"
reqwest = { workspace = true, default-features = false, features = [
    "rustls-tls",
] }
reqwest-tracing = "0.5.3"
tracing-actix-web = "0.7.14"

pektin-common = { workspace = true }
mows-common = { workspace = true }

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.96.0"
