[package]
name = "pektin_resource_controller"
version = "0.14.0"
edition = { workspace = true }
publish = false


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
indexing_slicing = "deny"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"


[dependencies]
actix-web = { workspace = true, features = ["default"] }
futures = { workspace = true, features = ["default"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
k8s-openapi = { workspace = true, features = ["latest"] }
schemars = { workspace = true, features = ["chrono"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["default"] }
serde_yaml = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

tracing = { workspace = true, features = ["default"] }
opentelemetry = { workspace = true, features = ["trace"] }


thiserror = { workspace = true, features = ["default"] }
anyhow = { workspace = true, features = ["default"] }
prometheus-client = { workspace = true }
vaultrs = { workspace = true, features = ["rustls"] }
serde_variant = { workspace = true }
itertools = { workspace = true, features = ["default"] }
reqwest = { workspace = true, default-features = false, features = [
    "rustls-tls",
] }
reqwest-tracing = { workspace = true }
tracing-actix-web = { workspace = true, features = ["default"] }

pektin-common = { workspace = true, features = ["default"] }
mows-common-rust = { workspace = true, features = ["default"] }

kube = { workspace = true, features = ["runtime", "client", "derive"] }
